--- a/translations/values-fr/strings.xml
+++ b/translations/values-fr/strings.xml
@@ -163,33 +163,33 @@
     <string name="pointicons">Icones de Pointage</string>
     <string name="base_approx_time_remaining">Montrer le temps estimé pour la capture de base</string>
     <string name="base_progress_beeping">Bipper quand la base est presque capturée</string>
-    <string name="mapscale">Map scale</string>
-    <string name="breadcrumbs">Breadcrumbs</string>
-    <string name="support_development">Support the development</string>
+    <string name="mapscale">Echelle de la Carte</string>
+    <string name="breadcrumbs">Aide à la navigation</string>
+    <string name="support_development">Supportez le développement</string>
 
-    <string name="airplane_range">Airplane detection range</string>
-    <string name="ground_range">Ground detection range</string>
-    <string name="connected">Connected</string>
-    <string name="supporter">Supporter</string>
-    <string name="contributor">Contributor</string>
-    <string name="contribute_resources">Help out with app resources</string>
-    <string name="waiting_for_battle">Waiting for battle</string>
+    <string name="airplane_range">Distance de détection d'avion</string>
+    <string name="ground_range">Distance de detection au sol</string>
+    <string name="connected">Connecté</string>
+    <string name="supporter">Supporteur</string>
+    <string name="contributor">Contributeur</string>
+    <string name="contribute_resources">Aidez à enrichir l'appli</string>
+    <string name="waiting_for_battle">En attente de bataille</string>
     <string name="subscription">(Subscription)</string>
-    <string name="exit_title">Exit the app?</string>
-    <string name="exit_question">Do you want to disconnect and close the app?</string>
-    <string name="hide_add_requirement">Become Supporter or Contributor to turn the ads off.</string>
-    <string name="coop_start">Start new co-op</string>
-    <string name="coop_join">Join co-op</string>
-    <string name="coop_title">Co-op session</string>
-    <string name="close_enemy_detection">Close enemy detection</string>
-    <string name="far_enemy_detection">Far enemy detection</string>
-    <string name="coop_connecting_to_id">Connecting to co-op ID:</string>
-    <string name="coop_session_started">Co-op session started.</string>
+    <string name="exit_title">Sortir de l'app ?</string>
+    <string name="exit_question">Voulez-vous vous déconnecter et fermer l'appli ?</string>
+    <string name="hide_add_requirement">Devenez Supporteur ou Contributeur pour ne plus avoir de pub.</string>
+    <string name="coop_start">Demarrer nouveau Co-op</string>
+    <string name="coop_join">Joindre Co-op</string>
+    <string name="coop_title">Session Co-op </string>
+    <string name="close_enemy_detection">Fermer la détection d'ennemis</string>
+    <string name="far_enemy_detection">Détection d'ennemis lointains</string>
+    <string name="coop_connecting_to_id">ID de connection Co-op:</string>
+    <string name="coop_session_started">Session de Co-op démarrée.</string>
     <string name="id">ID:</string>
     <string name="coop_chat_instruction_prefix">Type</string>
-    <string name="coop_chat_instruction_postfix">to game team chat.</string>
-    <string name="show_ads_while_not_playing">Show ads while not playing</string>
-    <string name="allow_data_collection">Allow anonymous data collection</string>
-    <string name="data_collection_explained">With compliance by Google Analytics rules, helping to make the app better for You.</string>
+    <string name="coop_chat_instruction_postfix">Chat d'équipe.</string>
+    <string name="show_ads_while_not_playing">Montrer les pubs hors des phases de jeu</string>
+    <string name="allow_data_collection">Autoriser la collecte de données anonymes</string>
+    <string name="data_collection_explained">En accord avec les règles de Google Analytics, pour rendre l'appli meilleure pour Vous.</string>
 
 </resources>
