--- a/translations/values-new_lng/strings.xml
+++ b/translations/values-new_lng/strings.xml
@@ -1,195 +1,195 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">WarThunder tactical map</string>
+    <string name="app_name">Mapa Táctico WarThunder</string>
     
-    <string name="settings">Settings</string>
-    <string name="hide">Hide</string>
-    <string name="danger">Danger notification</string>
-    <string name="nodanger">OK notification</string>
-    <string name="proximity_wrn">Radius:</string>
-    
-    
-    <string name="more">More settings</string>
-    <string name="connerror">No connection</string>
-    
-    <string name="gui">GUI settings</string>
-    <string name="screenon">Keep screen on</string>
-    <string name="counters">Counters</string>
-    
-    <string name="ip_h">IP address</string>
-    <string name="find_ip">Scan</string>
-    <string name="set_ip">Set IP</string>
-    <string name="ip">IP of computer with War Thunder (without port):</string>
+    <string name="settings">Definições</string>
+    <string name="hide">Minimizar</string>
+    <string name="danger">Aviso de perigo</string>
+    <string name="nodanger">Tudo OK</string>
+    <string name="proximity_wrn">Raio:</string>
     
     
-    <string name="zoom_btns">Zoom buttons</string>
-    <string name="donate">Support</string>
-    <string name="enemy_vehicles">Enemy vehicles</string>
-    <string name="friendly_vehicles">Friendly vehicles</string>
-    <string name="friendly_structures">Friendly structures</string>
-    <string name="enemy_structures">Enemy structures</string>
+    <string name="more">Mais definições</string>
+    <string name="connerror">Sem ligação</string>
     
-    <string name="updates_speed">Updates frequency</string>
-    <string name="how_ip">"How to get an IP address see: http://ip.junkcode.net/help"</string>
-    <string name="how_ip_der">"If you don't know how to get your IP address click here"</string>
-    <string name="ip_err">IP address not valid</string>
-    <string name="ip_err_wrong">"input address in format \r\nXXX.XXX.XXX.XXX \r\n Click on Help for guide to get right one."</string>
-    <string name="ip_err_local">"127.0.0.1 is not right address. \r\n Click on Help for guide to get right one."</string>
+    <string name="gui">Definições GUI</string>
+    <string name="screenon">Manter ecrã ligado</string>
+    <string name="counters">Contadores</string>
+    
+    <string name="ip_h">Endereço IP</string>
+    <string name="find_ip">Procurar</string>
+    <string name="set_ip">Definir IP</string>
+    <string name="ip">IP do computador com War Thunder (sem port):</string>
+    
+    
+    <string name="zoom_btns">Botões de Zoom</string>
+    <string name="donate">Apoia</string>
+    <string name="enemy_vehicles">Veículos inimigos</string>
+    <string name="friendly_vehicles">Veículos amigáveis</string>
+    <string name="friendly_structures">Estruturas amigáveis</string>
+    <string name="enemy_structures">Estruturas inimigas</string>
+    
+    <string name="updates_speed">Frequências dos updates</string>
+    <string name="how_ip">"Como obter o endereço IP ver: http://ip.junkcode.net/help"</string>
+    <string name="how_ip_der">"Se não sabes como ver o endereço IP, clica aqui"</string>
+    <string name="ip_err">Endereço IP não válido</string>
+    <string name="ip_err_wrong">"Insere o endereço com o formato \r\nXXX.XXX.XXX.XXX \r\n Clica em Ajuda para um guia sobre como obter o correcto."</string>
+    <string name="ip_err_local">"127.0.0.1 não é o endereço correcto. \r\n Clica em Ajuda para um guia sobre como obter o correcto."</string>
     <string-array name="updates_speed_array">
-        <item >Very Fast</item>
-        <item >Fast</item>
-        <item >Medium</item>
-        <item >Slowish</item>
-        <item >Slow</item>
-        <item >Srsly slow</item>
-        <item >5 sec</item>
+        <item >Muito rápido</item>
+        <item >Rápido</item>
+        <item >Médio</item>
+        <item >Relativamente lento</item>
+        <item >Lento</item>
+        <item >Muito lento</item>
+        <item >5 segundos</item>
     </string-array>
 
-     <string name="info_title">About</string>
+     <string name="info_title">Sobre</string>
     <string name="info_msg">
-        "This is unofficial app made by War Thunder fans!\r\n"
-        "This app is still in beta but feel free to contact us with bugs or new ideas at:\r\n"
+        "Esta é uma app não oficial feita por fãs de War Thunder! \r\n"
+        "Esta app ainda está em beta, mas está à vontade para contactar sobre bugs ou ideias:\r\n"
         "http://junkcode.net/forum \r\n"
         "\r\n"
-        "We are looking for people to translate this app, if you want to help see http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \r\n"        
+        "Estamos à procura de pessoas para traduzirem esta app, vai a http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \r\n"        
     </string>
     <string name="donate_line">
-        "Do you like this app? Say it by donation on http://junkcode.net for future development. \r\n"
+        "Gostas da app? Então demonstra-o com um donativo http://junkcode.net for future development. \r\n"
         </string>
-     <string name="info_update_title">Update news</string>
+     <string name="info_update_title">Notícias sobre updates</string>
      
-    <string name="version">App Version:</string>
+    <string name="version">Versão da app:</string>
     <string name="ok">OK</string>
-    <string name="cancel">Cancel</string>
-    <string name="ignore">Ignore</string>
-    <string name="help">Help</string>
-    <string name="pref_header_notifications">Notifications</string>
+    <string name="cancel">Cancelas</string>
+    <string name="ignore">Ignorar</string>
+    <string name="help">Ajuda</string>
+    <string name="pref_header_notifications">Notificações</string>
 
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_header_data_sync">PC connection</string>
-    <string name="pref_ringtone_silent">Silent</string>
+    <string name="pref_title_ringtone">Toque</string>
+    <string name="pref_header_data_sync">Conexão ao PC</string>
+    <string name="pref_ringtone_silent">Silêncio</string>
     
-    <string name="nowificonnected">You should connect to your local WiFi</string>
+    <string name="nowificonnected">Liga-te ao teu WiFi local</string>
 
-    <string name="planeicons">Airplane icons</string>
+    <string name="planeicons">Icons de aviões</string>
     <string-array name="planes_icon_size">
-        <item >Big</item>
-        <item >Medium</item>
-        <item >Small</item>
-        <item >Very small</item>
+        <item >Grande</item>
+        <item >Médio</item>
+        <item >Pequeno</item>
+        <item >Muito pequeno</item>
     </string-array>
     
-    <string name="lines">Navigation lines</string>
-    <string name="lines_oos">Only to offscreen targets</string>
-    <string name="lines_enemy">Enemies</string>
-    <string name="lines_friendly">Friendlies</string>
-    <string name="lines_squad">Squad</string>
-    <string name="lines_target">Target</string>
+    <string name="lines">Linhas de navegação</string>
+    <string name="lines_oos">Apenas para alvos offscreen</string>
+    <string name="lines_enemy">Inimigos</string>
+    <string name="lines_friendly">Amigáveis</string>
+    <string name="lines_squad">Esquadrão</string>
+    <string name="lines_target">Alvo</string>
     
-    <string name="hide_gp_login">Hide G+ Login button</string>
+    <string name="hide_gp_login">Esconder o botão de login G+</string>
     
-    <string name="fullscreen">Fullscreen</string>
-    <string name="connect">Connect to friends</string>
+    <string name="fullscreen">Ecrã inteiro</string>
+    <string name="connect">Ligar com amigos</string>
     
     <string name="waypoint">Waypoint</string>
-    <string name="waypoint_ctrl">Waypoint controls</string>
-    <string name="add">Add</string>
+    <string name="waypoint_ctrl">Controlos do Waypoint</string>
+    <string name="add">Adicionar</string>
     
-    <string name="horizontal_distance">Show horizontal distance</string>
+    <string name="horizontal_distance">Mostrar distância horizontal</string>
     
     <string name="pref_header_extras">Extra</string>
-    <string name="prediction">Prediction</string>
-    <string name="self">Self</string>
-    <string name="show_intro_screen">Show intro splash</string>
+    <string name="prediction">Previsão</string>
+    <string name="self">Próprio</string>
+    <string name="show_intro_screen">Mostrar o splash na introdução</string>
     
-    <string name="ext_unlock">Unlock extras</string>
+    <string name="ext_unlock">Desbloquear extras</string>
     <string name="ext_unlock_det">
-        "Extras are unlocked by donation of <b><i>any</i></b> amount or by content contribution\r\n(If you donated earlier and didn\'t get the code yet write us an email)"</string>
-    <string name="ext_unlock_dial">"Unlock Code:"</string>
+        "Extras são desbloqueados pelo donativo de <b><i>any</i></b> or por ajuda com o conteúdo\r\n(Se doaste antes e não recebeste nada, envia-nos um email)"</string>
+    <string name="ext_unlock_dial">"Código de desbloqueio"</string>
     
-    <string name="ext_link">Link to G+ account</string>
+    <string name="ext_link">Link para a conta G+</string>
     
-    <string name="firing_zone">Firing range</string>
-    <string name="gray_map">Grayscale map</string>
+    <string name="firing_zone">Distância de tiro</string>
+    <string name="gray_map">Escala de cinzentos</string>
     
-    <string name="map">Map:</string>
-    <string name="custom_maps">Custom maps</string>
-    <string name="custom_maps_url">Custom maps url</string>
-    <string name="see_forum">For details see JunkCode forum</string>
+    <string name="map">Mapa:</string>
+    <string name="custom_maps">Mapas personalisados</string>
+    <string name="custom_maps_url">URL mapas personalisados</string>
+    <string name="see_forum">Para detalhes, vê o forum JunkCode</string>
     
-    <string name="tankicons">Tank icons</string>
-    <string name="groundicons">Ground icons</string>
+    <string name="tankicons">Icons de tanques</string>
+    <string name="groundicons">Icons de Ground</string>
     
-    <string name="share_position">Share position</string>
-    <string name="death_markers">Leave skulls on death</string>
+    <string name="share_position">Partilhar posição</string>
+    <string name="death_markers">Deixar caveiras após morte</string>
 
-    <string name="size">Size</string>
-    <string name="style">Style</string>
+    <string name="size">Tamanho</string>
+    <string name="style">Estilo</string>
     
     <string-array name="style_types">
-        <item >Old</item>
-        <item >New</item>
+        <item >Antigo</item>
+        <item >Novo</item>
     </string-array>
     
     <string-array name="color_schemes">
-        <item>Default</item>
-        <item>Green/Orange</item>
-        <item>Green/Red</item>
+        <item>Padrão</item>
+        <item>Verde/Laranja</item>
+        <item>Verde/Vermelho</item>
     </string-array>
-    <string name="colors">Colors</string>
+    <string name="colors">Cores</string>
     
-    <string name="pref_header_map_view">Map setup</string>
+    <string name="pref_header_map_view">Definições de mapa</string>
     <string name="pref_header_GUI">GUI</string>
     
     <string name="help_title">Help &amp; FAQ</string>
     
-    <string name="blink">Allow flashing</string>
-    <string name="offline_mode">Offline mode</string>
-    <string name="talk_back">Talk back</string>
-    <string name="kills">Kills</string>
+    <string name="blink">Permitir flashing</string>
+    <string name="offline_mode">Modo Offline</string>
+    <string name="talk_back">Responder</string>
+    <string name="kills">Destruídos</string>
     <string name="trigger_words_kill">Kill trigger words</string>
-    <string name="trigger_words_kill_default">destroyed,shot down,уничтожен</string>
+    <string name="trigger_words_kill_default">destroyed,shot down,уничтожен, destruído</string>
     <string name="trigger_words_kill_summary">Default value: \"destroyed,shot down,уничтожен\"</string>
-    <string name="burns">Burns</string>
+    <string name="burns">Fogos</string>
     <string name="trigger_words_burn">Burn trigger words</string>
-    <string name="trigger_words_burn_default">set afire,подожжён</string>
+    <string name="trigger_words_burn_default">set afire,подожжён, fogo</string>
     <string name="trigger_words_burn_summary">Default value: \"set afire,подожжён\"</string>
-    <string name="player_name">Ingame name</string>
-    <string name="ext_unlocked">Extras unlocked</string>
-    <string name="please_restart">Please, restart the app for new settings to take effect.</string>
-    <string name="planes_in_tank">Detect airplanes while in tank</string>
-    <string name="bomber_path">Bomber paths</string>
-    <string name="air_raid_siren">Air raid siren</string>
-    <string name="pointicons">Point icons</string>
-    <string name="base_approx_time_remaining">Show approximate time to base capture</string>
-    <string name="base_progress_beeping">Beep on near base capturing</string>
-    <string name="mapscale">Map scale</string>
-    <string name="breadcrumbs">Breadcrumbs</string>
-    <string name="support_development">Support the development</string>
-    <string name="airplane_range">Airplane detection range</string>
-    <string name="ground_range">Ground detection range</string>
-    <string name="connected">Connected</string>
-    <string name="supporter">Supporter</string>
-    <string name="contributor">Contributor</string>
-    <string name="contribute_resources">Help out with app resources</string>
-    <string name="waiting_for_battle">Waiting for battle</string>
-    <string name="subscription">(Subscription)</string>
-    <string name="exit_title">Exit the app?</string>
-    <string name="exit_question">Do you want to disconnect and close the app?</string>
-    <string name="hide_add_requirement">Become Supporter or Contributor to turn the ads off.</string>
-    <string name="coop_start">Start new co-op</string>
-    <string name="coop_join">Join co-op</string>
-    <string name="coop_title">Co-op session</string>
-    <string name="close_enemy_detection">Close enemy detection</string>
-    <string name="far_enemy_detection">Far enemy detection</string>
-    <string name="coop_connecting_to_id">Connecting to co-op ID:</string>
-    <string name="coop_session_started">Co-op session started.</string>
+    <string name="player_name">Nome de jogo</string>
+    <string name="ext_unlocked">Extras desbloqueados</string>
+    <string name="please_restart">Reinicia a app para as novas definições terem efeito.</string>
+    <string name="planes_in_tank">Detetar aviões quando no tanque</string>
+    <string name="bomber_path">Caminhos de bombardeiros</string>
+    <string name="air_raid_siren">Sirene de ataque aéreo</string>
+    <string name="pointicons">Icones de pontos</string>
+    <string name="base_approx_time_remaining">Mostrar tempo aproximado para a captura da base</string>
+    <string name="base_progress_beeping">Apitar quando está quase a capturar a base</string>
+    <string name="mapscale">Escala do mapa</string>
+    <string name="breadcrumbs">Trilho</string>
+    <string name="support_development">Apoiar o desenvolvimento</string>
+    <string name="airplane_range">Distância de deteção de aviões</string>
+    <string name="ground_range">Distância de deteção de tanques</string>
+    <string name="connected">Conectado</string>
+    <string name="supporter">Apoiante</string>
+    <string name="contributor">Contribuidor</string>
+    <string name="contribute_resources">Ajuda com os recursos da app</string>
+    <string name="waiting_for_battle">À espera de batalha</string>
+    <string name="subscription">(Subscrição)</string>
+    <string name="exit_title">Sair da app?</string>
+    <string name="exit_question">Queres desconectar e desligar a app?</string>
+    <string name="hide_add_requirement">Torna-te contribuidor ou apoiante para desligar as publicidades.</string>
+    <string name="coop_start">Começar novo co-op</string>
+    <string name="coop_join">Juntar a co-op</string>
+    <string name="coop_title">Sessão Co-op</string>
+    <string name="close_enemy_detection">Deteção de inimigos próximos</string>
+    <string name="far_enemy_detection">Deteção de inimigos distantes</string>
+    <string name="coop_connecting_to_id">Ligando ao ID de co-op:</string>
+    <string name="coop_session_started">Sessão de Co-op iniciada.</string>
     <string name="id">ID:</string>
-    <string name="coop_chat_instruction_prefix">Type</string>
-    <string name="coop_chat_instruction_postfix">to game team chat.</string>
-    <string name="show_ads_while_not_playing">Show ads while not playing</string>
-    <string name="allow_data_collection">Allow anonymous data collection</string>
-    <string name="data_collection_explained">With compliance by Google Analytics rules, helping to make the app better for You.</string>
+    <string name="coop_chat_instruction_prefix">Tipo</string>
+    <string name="coop_chat_instruction_postfix">para o chat de equipa do jogo.</string>
+    <string name="show_ads_while_not_playing">Mostrar ads enquanto não está a jogar</string>
+    <string name="allow_data_collection">Permitir recolha de dados anónimos</string>
+    <string name="data_collection_explained">Em cumprimentos das regras Google Analytics, ajudando a tornar a app melhor para Ti.</string>
 
 </resources>
