--- a/translations/values-es/strings.xml
+++ b/translations/values-es/strings.xml
@@ -145,52 +145,52 @@
     <string name="help_title">Ayuda &amp; FAQ</string>
     
     <string name="blink">Permitir parpadeo</string>
-    <string name="offline_mode">Offline mode</string>
-    <string name="talk_back">Talk back</string>
-    <string name="kills">Kills</string>
+    <string name="offline_mode">Modo Offline</string>
+    <string name="talk_back">Responder</string>
+    <string name="kills">Muertes</string>
     <string name="trigger_words_kill">Kill trigger words</string>
     <string name="trigger_words_kill_default">destroyed,shot down,уничтожен</string>
     <string name="trigger_words_kill_summary">Default value: \"destroyed,shot down,уничтожен\"</string>
-    <string name="burns">Burns</string>
+    <string name="burns">Quemaduras</string>
     <string name="trigger_words_burn">Burn trigger words</string>
     <string name="trigger_words_burn_default">set afire,подожжён</string>
     <string name="trigger_words_burn_summary">Default value: \"set afire,подожжён\"</string>
-    <string name="player_name">Ingame name</string>
-    <string name="ext_unlocked">Extras unlocked</string>
-    <string name="please_restart">Please, restart the app for new settings to take effect.</string>
-    <string name="planes_in_tank">Detect airplanes while in tank</string>
-    <string name="bomber_path">Bomber paths</string>
-    <string name="air_raid_siren">Air raid siren</string>
-    <string name="pointicons">Point icons</string>
-    <string name="base_approx_time_remaining">Show approximate time to base capture</string>
-    <string name="base_progress_beeping">Beep on near base capturing</string>
-    <string name="mapscale">Map scale</string>
-    <string name="breadcrumbs">Breadcrumbs</string>
-    <string name="support_development">Support the development</string>
+    <string name="player_name">Nombre en Juego</string>
+    <string name="ext_unlocked">Extras Desbloqueados</string>
+    <string name="please_restart">Favor de reiniciar aplicacion para que los cambios tomen efector.</string>
+    <string name="planes_in_tank">Detectar aviones estando en Tanque</string>
+    <string name="bomber_path">Rutas de Bomarderos</string>
+    <string name="air_raid_siren">Sirena de ataque aereo</string>
+    <string name="pointicons">Icono de Puntos</string>
+    <string name="base_approx_time_remaining">Mostar tiempo aproxicmado de captura de la base</string>
+    <string name="base_progress_beeping">Alarma de captura de la base cercana</string>
+    <string name="mapscale">Escala del Mapa</string>
+    <string name="breadcrumbs">Migajas</string>
+    <string name="support_development">Apoyar al los Desarroyadores</string>
 
-    <string name="airplane_range">Airplane detection range</string>
-    <string name="ground_range">Ground detection range</string>
-    <string name="connected">Connected</string>
-    <string name="supporter">Supporter</string>
-    <string name="contributor">Contributor</string>
-    <string name="contribute_resources">Help out with app resources</string>
-    <string name="waiting_for_battle">Waiting for battle</string>
-    <string name="subscription">(Subscription)</string>
-    <string name="exit_title">Exit the app?</string>
-    <string name="exit_question">Do you want to disconnect and close the app?</string>
-    <string name="hide_add_requirement">Become Supporter or Contributor to turn the ads off.</string>
-    <string name="coop_start">Start new co-op</string>
-    <string name="coop_join">Join co-op</string>
-    <string name="coop_title">Co-op session</string>
-    <string name="close_enemy_detection">Close enemy detection</string>
-    <string name="far_enemy_detection">Far enemy detection</string>
-    <string name="coop_connecting_to_id">Connecting to co-op ID:</string>
-    <string name="coop_session_started">Co-op session started.</string>
+    <string name="airplane_range">Detectar el rango de Avion</string>
+    <string name="ground_range">Detectar Rango de Tanque</string>
+    <string name="connected">Connectado</string>
+    <string name="supporter">Patrocinar a los Desarroyadores</string>
+    <string name="contributor">Contribuir</string>
+    <string name="contribute_resources">Patrocinar recursos de la Aplicacion</string>
+    <string name="waiting_for_battle">Esperando Batalla</string>
+    <string name="subscription">(Subscripcion)</string>
+    <string name="exit_title">Salir de Aplicacion?</string>
+    <string name="exit_question">Deseas desconectarte y salir de la aplicacion?</string>
+    <string name="hide_add_requirement">Convertirse en patrocinador o colaborador para desactivar los anuncios.</string>
+    <string name="coop_start">Empezar modo Cooperacion</string>
+    <string name="coop_join">Uniser a modo Cooperacion</string>
+    <string name="coop_title">Secion en Cooperacion</string>
+    <string name="close_enemy_detection">Deteccion de enemigos cercanos</string>
+    <string name="far_enemy_detection">Deteccion de enemigos Lejanos</string>
+    <string name="coop_connecting_to_id">Conectando a modo Cooperacion ID:</string>
+    <string name="coop_session_started">Sesion Cooperacion a Empezado.</string>
     <string name="id">ID:</string>
-    <string name="coop_chat_instruction_prefix">Type</string>
-    <string name="coop_chat_instruction_postfix">to game team chat.</string>
-    <string name="show_ads_while_not_playing">Show ads while not playing</string>
-    <string name="allow_data_collection">Allow anonymous data collection</string>
-    <string name="data_collection_explained">With compliance by Google Analytics rules, helping to make the app better for You.</string>
+    <string name="coop_chat_instruction_prefix">Escribe</string>
+    <string name="coop_chat_instruction_postfix">Al chat del equipo de juego.</string>
+    <string name="show_ads_while_not_playing">Mostar anuncios mientras no se Juega</string>
+    <string name="allow_data_collection">Permitir la recolección de datos anónimos</string>
+    <string name="data_collection_explained">Con el cumplimiento de las reglas de Google Analytics, ayudando a que la aplicación sea mejor para ti.</string>
 
 </resources>
