--- a/translations/values-nl/strings.xml
+++ b/translations/values-nl/strings.xml
@@ -11,7 +11,7 @@
     
     
     <string name="more">Meer instellingen</string>
-    <string name="connerror">Geen connectie</string>
+    <string name="connerror">Geen verbinding</string>
     
     <string name="gui">GUI instellingen</string>
     <string name="screenon">Houd scherm aan</string>
@@ -23,12 +23,12 @@
     <string name="ip">IP van computer met War Thunder (zonder poort):</string>
     
     
-    <string name="zoom_btns">Zoem knoppen</string>
+    <string name="zoom_btns">Zoom knoppen</string>
     <string name="donate">Doneer</string>
     <string name="enemy_vehicles">Vijandelijke voertuigen</string>
     <string name="friendly_vehicles">Vriendelijke voertuigen</string>
-    <string name="friendly_structures">Vriendelijke structuren</string>
-    <string name="enemy_structures">Vijandelijke structures</string>
+    <string name="friendly_structures">Vriendelijke gebouwen</string>
+    <string name="enemy_structures">Vijandelijke gebouwen</string>
     
     <string name="updates_speed">Updates frequentie</string>
     <string name="how_ip">"Hoe vind ik mijn IP¨adress? Kijk op: http://ip.junkcode.net/help"</string>
@@ -49,7 +49,7 @@
      <string name="info_title">Over</string>
     <string name="info_msg">
         "Dit is een onofficieele app gemaakt door War Thunder fans!\r\n"
-        "Deze app is in beta, maar contacteer ons gerust over bugs of met nieuwe ideën op:\r\n"
+        "Deze app is in beta, maar neem gerust contact met ons op over bugs of over nieuwe ideën:\r\n"
         "http://junkcode.net/forum \r\n"
         "\r\n"
         "We zijn nog op zoek naar mensen om deze app te vertalen, als je wilt helpen kijk dan op http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \r\n"        
@@ -66,7 +66,7 @@
     <string name="help">Help</string>
     <string name="pref_header_notifications">Meldingen</string>
 
-    <string name="pref_title_ringtone">Ringtoon</string>
+    <string name="pref_title_ringtone">Ringtone</string>
     <string name="pref_header_data_sync">PC connectie</string>
     <string name="pref_ringtone_silent">Stil</string>
     
@@ -81,11 +81,11 @@
     </string-array>
     
     <string name="lines">Navigatie lijnen</string>
-    <string name="lines_oos">Alleen van het scherm doelwitten</string>
+    <string name="lines_oos">Alleen van het scherm</string>
     <string name="lines_enemy">Vijanden</string>
     <string name="lines_friendly">Vrienden</string>
-    <string name="lines_squad">Troep</string>
-    <string name="lines_target">Doelwot</string>
+    <string name="lines_squad">Groep</string>
+    <string name="lines_target">Doelwit</string>
     
     <string name="hide_gp_login">Verberg G+ Login knop</string>
     
@@ -111,18 +111,18 @@
     <string name="ext_link">Link aan G+ account</string>
     
     <string name="firing_zone">Vuurafstand</string>
-    <string name="gray_map">Zwart-Witte kaart</string>
+    <string name="gray_map">Zwart-Wit kaart</string>
     
     <string name="map">Map:</string>
-    <string name="custom_maps">Gecostumeerde kaarten</string>
-    <string name="custom_maps_url">Gecostumeerde kaarten url</string>
+    <string name="custom_maps">Aangepaste kaarten</string>
+    <string name="custom_maps_url">Aangepaste kaarten url</string>
     <string name="see_forum">Voor details kan je kijken op het JunkCode forum</string>
     
-    <string name="tankicons">Tank icons</string>
+    <string name="tankicons">Tank iconen</string>
     <string name="groundicons">Grond icoon</string>
     
     <string name="share_position">Deel positie</string>
-    <string name="death_markers">Laat schedel bij overlijden</string>
+    <string name="death_markers">Toon schedel bij dood</string>
 
     <string name="size">Grootte</string>
     <string name="style">Stijl</string>
@@ -133,8 +133,8 @@
     </string-array>
     
     <string-array name="color_schemes">
-        <item>Standaart</item>
-        <item>Groen/Orange</item>
+        <item>Standaard</item>
+        <item>Groen/Oranje</item>
         <item>Groen/Rood</item>
     </string-array>
     <string name="colors">Kleuren</string>
@@ -144,53 +144,53 @@
     
     <string name="help_title">Help &amp; FAQ</string>
 
-    <string name="blink">Allow flashing</string>
-    <string name="offline_mode">Offline mode</string>
-    <string name="talk_back">Talk back</string>
+    <string name="blink">Knipperen toestaan</string>
+    <string name="offline_mode">Offline modus</string>
+    <string name="talk_back">Terug praten</string>
     <string name="kills">Kills</string>
-    <string name="trigger_words_kill">Kill trigger words</string>
+    <string name="trigger_words_kill">Kill trigger woorden</string>
     <string name="trigger_words_kill_default">destroyed,shot down,уничтожен</string>
-    <string name="trigger_words_kill_summary">Default value: \"destroyed,shot down,уничтожен\"</string>
-    <string name="burns">Burns</string>
-    <string name="trigger_words_burn">Burn trigger words</string>
+    <string name="trigger_words_kill_summary">Standaard waarde: \"destroyed,shot down,уничтожен\"</string>
+    <string name="burns">Verbrandt</string>
+    <string name="trigger_words_burn">Brand trigger woorden</string>
     <string name="trigger_words_burn_default">set afire,подожжён</string>
-    <string name="trigger_words_burn_summary">Default value: \"set afire,подожжён\"</string>
-    <string name="player_name">Ingame name</string>
-    <string name="ext_unlocked">Extras unlocked</string>
-    <string name="please_restart">Please, restart the app for new settings to take effect.</string>
-    <string name="planes_in_tank">Detect airplanes while in tank</string>
+    <string name="trigger_words_burn_summary">Standaard waarde: \"set afire,подожжён\"</string>
+    <string name="player_name">Spelers naam</string>
+    <string name="ext_unlocked">Extras ontgrendeld</string>
+    <string name="please_restart">Start de app alstublieft opnieuw op om de nieuwe instellingen toe te passen.</string>
+    <string name="planes_in_tank">Opsporing van vliegtuigen wanneer je in een tank zit</string>
     <string name="bomber_path">Bomber paths</string>
-    <string name="air_raid_siren">Air raid siren</string>
+    <string name="air_raid_siren">Luchtaanval sirene</string>
     <string name="pointicons">Point icons</string>
-    <string name="base_approx_time_remaining">Show approximate time to base capture</string>
-    <string name="base_progress_beeping">Beep on near base capturing</string>
-    <string name="mapscale">Map scale</string>
-    <string name="breadcrumbs">Breadcrumbs</string>
-    <string name="support_development">Support the development</string>
+    <string name="base_approx_time_remaining">Laat de geschatte tijd zien tot de basis is veroverd</string>
+    <string name="base_progress_beeping">Piep wanneer de basis bijna is veroverd</string>
+    <string name="mapscale">Map schaal</string>
+    <string name="breadcrumbs">kruimels</string>
+    <string name="support_development">Ondersteun de ontwikkeling</string>
 
-    <string name="airplane_range">Airplane detection range</string>
-    <string name="ground_range">Ground detection range</string>
-    <string name="connected">Connected</string>
-    <string name="supporter">Supporter</string>
-    <string name="contributor">Contributor</string>
-    <string name="contribute_resources">Help out with app resources</string>
-    <string name="waiting_for_battle">Waiting for battle</string>
-    <string name="subscription">(Subscription)</string>
-    <string name="exit_title">Exit the app?</string>
-    <string name="exit_question">Do you want to disconnect and close the app?</string>
-    <string name="hide_add_requirement">Become Supporter or Contributor to turn the ads off.</string>
-    <string name="coop_start">Start new co-op</string>
+    <string name="airplane_range">Vliegtuig opsporings radius</string>
+    <string name="ground_range">Grond opsporings radius</string>
+    <string name="connected">Verbonden</string>
+    <string name="supporter">Sponsor</string>
+    <string name="contributor">Bijdrager</string>
+    <string name="contribute_resources">Help door bij te dragen aan de app</string>
+    <string name="waiting_for_battle">Wachten voor gevecht</string>
+    <string name="subscription">(Abbonement)</string>
+    <string name="exit_title">De app sluiten?</string>
+    <string name="exit_question">Wil je de verbinding verbreken en de app sluiten?</string>
+    <string name="hide_add_requirement">Wordt sponsor of draag bij aan de app om de advertenties uit te schakelen.</string>
+    <string name="coop_start">Start nieuwe co-op</string>
     <string name="coop_join">Join co-op</string>
-    <string name="coop_title">Co-op session</string>
-    <string name="close_enemy_detection">Close enemy detection</string>
-    <string name="far_enemy_detection">Far enemy detection</string>
-    <string name="coop_connecting_to_id">Connecting to co-op ID:</string>
-    <string name="coop_session_started">Co-op session started.</string>
+    <string name="coop_title">Co-op sessie</string>
+    <string name="close_enemy_detection">Dichtbij vijanden opsporen</string>
+    <string name="far_enemy_detection">Ver weg vijanden opsporen</string>
+    <string name="coop_connecting_to_id">Verbinden met co-op ID:</string>
+    <string name="coop_session_started">Co-op sessie gestart.</string>
     <string name="id">ID:</string>
     <string name="coop_chat_instruction_prefix">Type</string>
-    <string name="coop_chat_instruction_postfix">to game team chat.</string>
-    <string name="show_ads_while_not_playing">Show ads while not playing</string>
-    <string name="allow_data_collection">Allow anonymous data collection</string>
-    <string name="data_collection_explained">With compliance by Google Analytics rules, helping to make the app better for You.</string>
+    <string name="coop_chat_instruction_postfix">naar game team chat.</string>
+    <string name="show_ads_while_not_playing">Laat advertenties zijn als je niet aan het spelen bent</string>
+    <string name="allow_data_collection">Anonieme data verzameling toestaan</string>
+    <string name="data_collection_explained">Door te voldoen aan de regels van Google Analitics, help je de app beter te maken.</string>
 
 </resources>
