--- a/translations/values-zh/help.xml
+++ b/translations/values-zh/help.xml
@@ -1,56 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <string name="help_map_ctrl">Map control</string>
+    <string name="help_map_ctrl">地图控制</string>
     <string name="text_help_map_ctrl">
-        <b>1</b> Free mode\n
-        <b>2</b> Follow plane\n
-        <b>3</b> Rotation lock\n
-        <b>4</b> Click to reset\n
+        <b>1</b> 自由模式\n
+        <b>2</b> 跟随飞机\n
+        <b>3</b> 视角旋转锁\n
+        <b>4</b> 点击重置\n
     </string>
     
-    <string name="help_prediction">Prediction</string>
+    <string name="help_prediction">预测</string>
     <string name="text_help_prediction">
-        Prediction of plane position (based on current speed and direction) in 10,30 and 90 seconds
+        预测飞机10.30.90s后的位置 （基于当前速度和方向） 
     </string>
     
-    <string name="faq">FAQ (Frequently asked questions)</string>
+    <string name="faq">常见问题</string>
     
-    <string name="faq_connection">Connection</string>
+    <string name="faq_connection">连接</string>
     <string name="text_faq_con">
-        <b>How do I connect?</b>\n
-         \u00A0\u00A0 The app needs an IP address of your computer running War Thunder, how to get your IP see http://ip.junkcode.net \n\n
+        <b>我怎样连接?</b>\n
+         \u00A0\u00A0 该应用程序需要获得运行War Thunder的计算机的IP地址，如何获取IP，请访问http://ip.junkcode.net (英文) \n\n
          
-        <b>I did enter IP and it still says \"No connection\"</b>\n
-         \u00A0\u00A0 There might be problem with your local network routing see http://ip.junkcode.net/help \n\n
+        <b>我输入了IP但它仍然提示 \"无连接\"</b>\n
+         \u00A0\u00A0 您的本地网络路由可能有问题，请参阅http://ip.junkcode.net/help (英文) \n\n
          
-        <b>It still doesn\'t connect!</b>\n
-         \u00A0\u00A0 You didn\'t read http://ip.junkcode.net/help, did you?
+        <b>它仍然没有连接！</b>\n
+         \u00A0\u00A0 你绝对没有访问 http://ip.junkcode.net/help (英文), 没错吧?
          \n
     </string>
     
-    <string name="faq_extras">Extras</string>
+    <string name="faq_extras">额外内容</string>
     <string name="text_faq_extra">   
-        <b>I donated, where is my code?</b>\n
-         \u00A0\u00A0 You should receive code to your email within few minutes after donation, if not contact support@junkcode.net \n\n
+        <b>我已捐款,我的激活码在哪里?</b>\n
+         \u00A0\u00A0 捐赠后几分钟内，您应该收到电子邮件的代码，如果没有的话请联系 support@junkcode.net (请使用英文) \n\n
          
-        <b>I entered code but nothing is unlocked</b>\n
-         \u00A0\u00A0 Try restarting the app \n\n
+        <b>我输入了代码，但没有解锁</b>\n
+         \u00A0\u00A0 请尝试重启应用 \n\n
         
     </string>
-    <string name="faq_improvement">App improvement</string>
+    <string name="faq_improvement">应用程序改进</string>
     <string name="text_faq_improve">"  
-        <b>I don\'t like something</b>\n
-         \u00A0\u00A0 Let us know what - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>我不喜欢其中的部分内容</b>\n
+         \u00A0\u00A0 请让我们知道! - http://junkcode.net/forum/viewforum.php?f=14 (English Only) \n\n
          
-        <b>I found a bug</b>\n
-         \u00A0\u00A0 Post it here http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
+        <b>我发现了个BUG</b>\n
+         \u00A0\u00A0 请在此发表 http://github.com/JunkCode/wtTactMap/issues?state=open (大陆部分地区可能无法访问,需注册账号) \n\n
          
-        <b>I have idea for new feature</b>\n
-         \u00A0\u00A0 Let us know what - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>我有个新功能想法!</b>\n
+         \u00A0\u00A0 请让我们知道! - http://junkcode.net/forum/viewforum.php?f=14 (English Only) \n\n
          
-        <b>I want to help with translation/icons/...</b>\n
-         \u00A0\u00A0 Some of the resources are already here http://github.com/JunkCode/wtTactMap You can propose modification or add new things. If you have any question or other ideas let us know - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>我想帮助 翻译程序/设计图标/...</b>\n
+         \u00A0\u00A0 一些资源已经在这里 http://github.com/JunkCode/wtTactMap 您可以提出修改或添加新事物。 如果您有任何问题或其他想法请让我们知道 - http://junkcode.net/forum/viewforum.php?f=14 (English only) \n\n
          
     </string>
     
