--- a/translations/values-fr/strings.xml
+++ b/translations/values-fr/strings.xml
@@ -167,29 +167,29 @@
     <string name="breadcrumbs">Aide à la navigation</string>
     <string name="support_development">Supportez le développement</string>
 
-    <string name="airplane_range">Distance de détection d'avion</string>
+    <string name="airplane_range">Distance de détection d\'avion</string>
     <string name="ground_range">Distance de detection au sol</string>
     <string name="connected">Connecté</string>
     <string name="supporter">Supporteur</string>
     <string name="contributor">Contributeur</string>
-    <string name="contribute_resources">Aidez à enrichir l'appli</string>
+    <string name="contribute_resources">Aidez à enrichir l\'appli</string>
     <string name="waiting_for_battle">En attente de bataille</string>
     <string name="subscription">(Subscription)</string>
-    <string name="exit_title">Sortir de l'app ?</string>
-    <string name="exit_question">Voulez-vous vous déconnecter et fermer l'appli ?</string>
+    <string name="exit_title">Sortir de l\'app ?</string>
+    <string name="exit_question">Voulez-vous vous déconnecter et fermer l\'appli ?</string>
     <string name="hide_add_requirement">Devenez Supporteur ou Contributeur pour ne plus avoir de pub.</string>
     <string name="coop_start">Demarrer nouveau Co-op</string>
     <string name="coop_join">Joindre Co-op</string>
     <string name="coop_title">Session Co-op </string>
-    <string name="close_enemy_detection">Fermer la détection d'ennemis</string>
-    <string name="far_enemy_detection">Détection d'ennemis lointains</string>
+    <string name="close_enemy_detection">Fermer la détection d\'ennemis</string>
+    <string name="far_enemy_detection">Détection d\'ennemis lointains</string>
     <string name="coop_connecting_to_id">ID de connection Co-op:</string>
     <string name="coop_session_started">Session de Co-op démarrée.</string>
     <string name="id">ID:</string>
     <string name="coop_chat_instruction_prefix">Type</string>
-    <string name="coop_chat_instruction_postfix">Chat d'équipe.</string>
+    <string name="coop_chat_instruction_postfix">Chat d\'équipe.</string>
     <string name="show_ads_while_not_playing">Montrer les pubs hors des phases de jeu</string>
     <string name="allow_data_collection">Autoriser la collecte de données anonymes</string>
-    <string name="data_collection_explained">En accord avec les règles de Google Analytics, pour rendre l'appli meilleure pour Vous.</string>
+    <string name="data_collection_explained">En accord avec les règles de Google Analytics, pour rendre l\'appli meilleure pour Vous.</string>
 
 </resources>
