--- a/translations/values-it/help.xml
+++ b/translations/values-it/help.xml
@@ -46,12 +46,12 @@
         <b>Ho trovato un bug</b>\n
          \u00A0\u00A0 Pubblicalo su questa pagina http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
-        <b>Ho un'idea per una nuova funzione</b>\n
+        <b>Ho un\'idea per una nuova funzione</b>\n
          \u00A0\u00A0 Faccelo sapere (preferibilmente in inglese) - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
         <b>Voglio aiustare con la traduzione/icons/...</b>\n
          \u00A0\u00A0 Parte delle risorse le puoi trovare su http://github.com/JunkCode/wtTactMap Puoi proporre modifiche ed aggiunte. Se hai domande o suggerimenti  - http://junkcode.net/forum/viewforum.php?f=14 \n\n
-         
+         "
     </string>
     
 </resources>
